k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gamecloud-ingress
  namespace: gamecloud
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/websocket-services: "quiz-service"
spec:
  ingressClassName: nginx
  rules:
    - host: gamecloud.local
      http:
        paths:
          - path: /api/auth(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: auth-service
                port:
                  number: 80
          - path: /api/pendu(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: pendu-service
                port:
                  number: 80
          - path: /api/quiz(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: quiz-service
                port:
                  number: 80
          - path: /api/p4(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: p4-service
                port:
                  number: 80
          - path: /api/memory(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: memory-service
                port:
                  number: 80
          - path: /api/scores(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: score-service
                port:
                  number: 80
          - path: /(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: frontend-service
                port:
                  number: 80
